// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LectureDetail > hasHomework is false 1`] = `
<DocumentFragment>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-shgr9c-MuiTypography-root"
  >
    string
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-8wzaua-MuiTypography-root"
    >
      Содержание урока
    </h5>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-b55nah-MuiStack-root"
    >
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          1
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string1
        </h6>
      </div>
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          2
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string2
        </h6>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6qxqkz-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-8wzaua-MuiTypography-root"
    >
      Спикеры
    </h5>
    <div
      class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
    >
      <div
        class="MuiStack-root css-9jigf2-MuiStack-root"
      >
        <div
          class="MuiStack-root css-unhrs1-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1gkzrlu-MuiAvatar-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              ss
            </h6>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
            >
              string string
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6qxqkz-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1ht8sh5-MuiTypography-root"
    >
      Материалы урока
    </h5>
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    />
  </div>
  <div
    class="MuiBox-root css-79elbk"
  >
    <div
      class="MuiBox-root css-1nsqiu3"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-16cch88-MuiPaper-root"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 css-ch2k2f-MuiTypography-root"
        >
          Домашнее задание
        </h5>
        <div
          class="MuiStack-root css-zgbp5c-MuiStack-root"
        />
      </div>
      <div
        class="MuiBox-root css-pxpt32"
      >
        <div
          class="MuiGrid-root MuiGrid-container css-u5c3di-MuiGrid-root"
        >
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px; color: rgb(44, 204, 166);"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-disableElevation css-237h2n-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Д/З недоступно
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`LectureDetail > hasHomework is true 1`] = `
<DocumentFragment>
  <h4
    class="MuiTypography-root MuiTypography-h4 css-shgr9c-MuiTypography-root"
  >
    string
  </h4>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nxklxt-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-8wzaua-MuiTypography-root"
    >
      Содержание урока
    </h5>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
    />
    <div
      class="MuiStack-root css-b55nah-MuiStack-root"
    >
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          1
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string1
        </h6>
      </div>
      <div
        class="MuiStack-root css-1sx5dla-MuiStack-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 css-16en7dj-MuiTypography-root"
        >
          2
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          string2
        </h6>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6qxqkz-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-8wzaua-MuiTypography-root"
    >
      Спикеры
    </h5>
    <div
      class="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
    >
      <div
        class="MuiStack-root css-9jigf2-MuiStack-root"
      >
        <div
          class="MuiStack-root css-unhrs1-MuiStack-root"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1gkzrlu-MuiAvatar-root"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-ati914-MuiTypography-root"
            >
              ss
            </h6>
          </div>
          <div
            class="MuiBox-root css-0"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
            >
              string string
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-6qxqkz-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-1ht8sh5-MuiTypography-root"
    >
      Материалы урока
    </h5>
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    />
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-16cch88-MuiPaper-root"
  >
    <h5
      class="MuiTypography-root MuiTypography-h5 css-ch2k2f-MuiTypography-root"
    >
      Домашнее задание
    </h5>
    <div
      class="MuiStack-root css-zgbp5c-MuiStack-root"
    >
      <div
        class="MuiBox-root css-i6bazn"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
          Здесь будет отображаться текст домашнего задания к текущей лекции.
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
          Пример домашнего задания:
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
          1. Есть ли разница между $("h1 div"); и $("h1").$("div").
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
          Может ли привести к тому что, поиск найдёт разные элементы?
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
          2. Разработайте следующий автотест:
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
           - Откройте страницу Selenide в Github
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
           - Перейдите в раздел Wiki проекта
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
           - Убедитесь, что в списке страниц (Pages) есть страница SoftAssertions
          <br />
        </h6>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 css-18u75fl-MuiTypography-root"
        >
           - Откройте страницу SoftAssertions, проверьте что внутри есть пример кода для JUnit5
          <br />
        </h6>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container css-u5c3di-MuiGrid-root"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px; color: rgb(44, 204, 166);"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container css-u5c3di-MuiGrid-root"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px; color: rgb(44, 204, 166);"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
